creation des l'interface d'inscription des students, teachers, liste des students, teachers